--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My test page</title>
-        <link rel="stylesheet" href="assets/styles/my-styles.css">
+        <title>Yogurt World Menu</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-      </head>
+        <style type="text/css">
+            div {
+                column-gap: 40px;
+            }
+        </style>
+    </head>
       <body>
         <table style="width: 100%;">
             <tr style="text-align: center;">
@@ -20,11 +24,11 @@
               <div class="col" style="border-bottom: dotted 3px;">
                 <h3>SUPERFOOD SMOOTHIES</h3>
               </div>
-              <div class="col">
-                BOOSTERS
+              <div class="col" style="border-bottom: dotted 3px;">
+                <h3>BOOSTERS</h3>
               </div>
-              <div class="col">
-                ACAI BOWLS & MORE
+              <div class="col" style="border-bottom: dotted 3px;">
+                <h3>ACAI BOWLS & MORE</h3>
               </div>
             </div>
             <div class="row">
