--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <body>
         <table style="width: 100%;">
             <tr style="text-align: center;">
-                <th>WE ARE 100%</th>
-                <th style="background-color: black;color:white;text-align:center;">ORGANIC / NON-GMO / VEGAN / GLUTEN-FREE / PEANUT-FREE / SOY-FREE / DAIRY-FREE</th>
-                <th>100% OF THE TIME.</th>
+                <th style="border-bottom: solid 3px;">WE ARE 100%</th>
+                <th style="background-color: black;color:white;text-align:center;border: solid 3px; border-color: black;">ORGANIC / NON-GMO / VEGAN / GLUTEN-FREE / PEANUT-FREE / SOY-FREE / DAIRY-FREE</th>
+                <th style="border-top: solid 3px">100% OF THE TIME.</th>
             </tr>
         </table>
         
