adding menu items part 1

--- a/index.html
+++ b/index.html
@@ -33,24 +33,41 @@
             </div>
             <div class="row">
               <div class="col">
-                One of three columns
+                <h4>COCO VERDE</h4>
+                <p>kale, spinach, mango, banana, dates, coconut oil, coconut water</p>
+                <h4>BRADLEY'S CB&J</h4>
+                <p>strawberry, banana, cashew butter, dates, dragonfruit, house cashew milk</p>
+                <h4>SUPERMAN</h4>
+                <p>blueberries, goji berries, banana, dates, dragonfruit, house almond milk</p>
               </div>
               <div class="col">
-                One of three columns
+                <div class="row">
+                    <div class="col">
+                        <h6>ACAI</h6>
+                        <h6>CHIA SEEDS</h6>
+                        <h6>HEMP PROTEIN</h6>
+                        <h6>SPINACH</h6>
+                        <h6>KALE</h6>
+                    </div>
+                    <div class="col">
+                        <h6>CACAO</h6>
+                        <h6>ALOE VERA</h6>
+                        <h6>COCONUT OIL</h6>
+                        <h6>FLAX SEEDS</h6>
+                        <h6>GINGER</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <h6>MATCHA</h6>
+                    <h6>GOJI BERRIES</h6>
+                    <h6>VEGAN PROBIOTIC</h6>
+                    <h6>WHEATGRASS</h6>
+                    <h6>MACA</h6>
+                </div>
               </div>
               <div class="col">
-                One of three columns
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                One of three columns
-              </div>
-              <div class="col">
-                One of three columns
-              </div>
-              <div class="col">
-                One of three columns
+                <h4>ACAI SMOOTHIE BOWL</h4>
+                <p>Pick any smoothie to use as the base for your bowl. Smoothie bowls come blended with acai and topped with fruit and our house granola</p>
               </div>
             </div>
           </div>
