menu picture added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
     </head>
       <body>
-        <table style="width: 100%;">
+        <table style="width: 100%; margin-bottom: 4px;font-family:Verdana, Geneva, Tahoma, sans-serif">
             <tr style="text-align: center;">
                 <th style="border-bottom: solid 3px;">WE ARE 100%</th>
                 <th style="background-color: black;color:white;text-align:center;border: solid 3px; border-color: black;">ORGANIC / NON-GMO / VEGAN / GLUTEN-FREE / PEANUT-FREE / SOY-FREE / DAIRY-FREE</th>
@@ -20,7 +20,7 @@
         </table>
         
         <div class="container-fluid" style="text-align: center;">
-            <div class="row">
+            <div class="row" style="margin-bottom: 4px;">
               <div class="col" style="border-bottom: dotted 3px;">
                 <h3>SUPERFOOD SMOOTHIES</h3>
               </div>
@@ -64,6 +64,7 @@
                     <h6>WHEATGRASS</h6>
                     <h6>MACA</h6>
                 </div>
+                <img src="assets/images/465-waterboy.jpg.jpg" alt="Waterboy Yogurt Smoothie" style="display:block; width: 100%;">
               </div>
               <div class="col">
                 <h4>ACAI SMOOTHIE BOWL</h4>
